--- a/app/src/main/res/layout/dialog_categories.xml
+++ b/app/src/main/res/layout/dialog_categories.xml
@@ -33,14 +33,12 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                style="@style/TextAppearance.ChefBook.Header.3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="0"
-                android:text="@string/select_categories"
-                android:textColor="@color/monochrome_invert"
-                android:textSize="24sp"
-                app:fontFamily="@font/comfortaa" />
+                android:text="@string/select_categories" />
 
             <View
                 android:layout_width="match_parent"
