--- a/app/src/main/res/layout/dialog_donate.xml
+++ b/app/src/main/res/layout/dialog_donate.xml
@@ -31,15 +31,13 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                style="@style/TextAppearance.ChefBook.Header.3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="16dp"
                 android:gravity="center"
-                android:text="@string/donate"
-                android:textColor="@color/monochrome_invert"
-                android:textSize="24sp"
-                app:fontFamily="@font/comfortaa" />
+                android:text="@string/donate" />
 
             <TextView
                 android:layout_width="wrap_content"
