--- a/app/src/main/res/layout/list_selectable_edit.xml
+++ b/app/src/main/res/layout/list_selectable_edit.xml
@@ -9,7 +9,7 @@
         <import type="android.graphics.Typeface" />
 
         <variable
-            name="ingredient"
+            name="selectable_item"
             type="com.cactusknights.chefbook.models.Selectable&lt;String>" />
     </data>
 
@@ -44,13 +44,13 @@
                 android:layout_height="36dp"
                 android:layout_weight="3"
                 android:background="@drawable/selector_input"
-                android:hint="@{ingredient.isSelected ? @string/section:@string/ingredient}"
+                android:hint="@{selectable_item.isSelected ? @string/section:@string/ingredient}"
                 android:imeOptions="actionNext"
                 android:inputType="text"
                 android:paddingHorizontal="8dp"
                 android:paddingVertical="4dp"
-                android:text="@{ingredient.item}"
-                app:isSectionEdit="@{ingredient.isSelected}" />
+                android:text="@{selectable_item.item}"
+                app:isSectionEdit="@{selectable_item.isSelected}" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/btn_delete_ingredient"
