--- a/app/src/main/res/drawable/ripple_secondary.xml
+++ b/app/src/main/res/drawable/ripple_secondary.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/navigation_foreground">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/navigation_ripple">
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/app_background"/>
