--- a/app/src/main/res/drawable/selector_navigation_foreground.xml
+++ b/app/src/main/res/drawable/selector_navigation_foreground.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_checked="true" android:color="@color/deep_orange_light" />
-    <item android:color="@color/navigation_foreground"  />
+    <item android:color="@color/navigation_ripple"  />
 
 </selector>
