--- a/app/src/main/res/drawable/tab_indicator_default.xml
+++ b/app/src/main/res/drawable/tab_indicator_default.xml
@@ -4,5 +4,5 @@
     android:shape="ring"
     android:thickness="2dp"
     android:useLevel="false">
-    <solid android:color="@color/navigation_foreground"/>
+    <solid android:color="@color/navigation_ripple"/>
 </shape>
