--- a/app/src/main/res/layout-v26/list_steps.xml
+++ b/app/src/main/res/layout-v26/list_steps.xml
@@ -10,6 +10,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ll_step"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
