--- a/app/src/main/res/layout/dialog_recipe.xml
+++ b/app/src/main/res/layout/dialog_recipe.xml
@@ -32,13 +32,11 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                style="@style/TextAppearance.ChefBook.Header.3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/recipe_menu"
-                android:textColor="@color/monochrome_invert"
-                android:textSize="24sp"
-                app:fontFamily="@font/comfortaa" />
+                android:text="@string/recipe_menu" />
 
             <View
                 android:layout_width="match_parent"
