--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -39,14 +39,12 @@
 
                 <TextView
                     android:id="@+id/text_user"
+                    style="@style/TextAppearance.ChefBook.Header.3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="@string/user"
-                    android:textColor="@color/monochrome_invert"
-                    android:textSize="24sp"
-                    app:fontFamily="@font/comfortaa" />
+                    android:text="@string/user" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/image_premium"
