--- a/app/src/main/res/layout/list_steps_edit.xml
+++ b/app/src/main/res/layout/list_steps_edit.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:paddingVertical="6dp"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
