feature(Modularization): add buildSrc

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="true">
-        <item>@font/comfortaa</item>
-        <item>@font/comfortaa_bold</item>
-        <item>@font/comfortaa_semibold</item>
-        <item>@font/montserrat</item>
-        <item>@font/montserrat_medium</item>
-        <item>@font/montserrat_semibold</item>
+        <item>@font/inter_regular</item>
+        <item>@font/inter_medium</item>
+        <item>@font/inter_semibold</item>
     </array>
 </resources>
