--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ChefBook" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.ChefBook" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/deep_orange_light</item>
-        <item name="colorPrimaryVariant">@color/deep_orange_dark</item>
         <item name="colorAccent">@color/deep_orange_light</item>
-        <item name="colorOnPrimary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="m">@color/app_background</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
@@ -13,7 +11,7 @@
         <item name="android:windowBackground">@color/app_background</item>
         <item name="android:navigationBarColor" tools:targetApi="p">@color/app_background</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="p">true</item>
-        <item name="fontFamily">@font/montserrat</item>
+        <item name="fontFamily">@font/inter_regular</item>
 
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
