--- a/common/core-ui/src/main/res/drawable/ic_broccy.xml
+++ b/common/core-ui/src/main/res/drawable/ic_broccy.xml
@@ -1,27 +1,10 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M47.3,88.5c-9.6,0 -17.5,-7.8 -17.5,-17.5v-4.8c-7.2,-1.4 -12.6,-7.8 -12.6,-15.4c0,-5.8 3.2,-11.1 8.1,-13.8c0,-0.4 0,-0.8 0.1,-1.1c0.8,-9.3 9.6,-16.4 20.5,-16.4c0.7,0 1.5,0 2.2,0.1c5.1,0.5 10,2.5 13.6,5.7c1.3,-0.4 2.6,-0.6 4,-0.7c0.6,-0.1 1.3,-0.1 2,-0.1c9.2,0 16.7,5.8 17.4,13.5c0.1,0.7 0.1,1.5 0,2.2c2.5,1.5 4.3,3.7 5,6.3c0.8,2.7 0.3,5.6 -1.2,8.2c-2.1,3.6 -6,6.4 -10.8,7.6c-0.7,0.2 -1.4,0.3 -2.1,0.4V71c0,9.6 -7.8,17.5 -17.5,17.5H47.3z" />
-    <path
-        android:fillColor="#FF8A50"
-        android:pathData="M46,22.5c0.6,0 1.3,0 2,0.1c5.3,0.5 10,2.8 13,6.2c1.6,-0.6 3.2,-1 5,-1.2c0.6,-0.1 1.1,-0.1 1.7,-0.1c7.6,0 13.9,4.6 14.4,10.7c0.1,1.3 0,2.5 -0.4,3.7c2.7,1 4.8,2.9 5.5,5.4c1.4,4.9 -3,10.3 -9.8,12.1C76,59.8 74.6,60 73.2,60c-0.1,0 -0.1,0 -0.2,0V71c0,8 -6.5,14.5 -14.5,14.5H47.3c-8,0 -14.5,-6.5 -14.5,-14.5v-7.6c-6.9,0 -12.6,-5.7 -12.6,-12.7c0,-5.5 3.4,-10.1 8.3,-11.9c-0.1,-0.9 -0.2,-1.8 -0.1,-2.8C29.1,28.3 36.8,22.5 46,22.5M46,16.5C46,16.5 46,16.5 46,16.5c-12.3,0 -22.4,8 -23.5,18.8c-5.1,3.4 -8.2,9.2 -8.2,15.5c0,8.2 5.3,15.2 12.6,17.7V71c0,11.3 9.2,20.5 20.5,20.5h11.3c11.3,0 20.5,-9.2 20.5,-20.5v-5.8c5.5,-1.4 10,-4.7 12.5,-9c1.9,-3.3 2.4,-7 1.5,-10.5c-0.8,-2.8 -2.5,-5.2 -4.9,-7.1c0,-0.3 0,-0.6 -0.1,-0.9c-0.8,-9.2 -9.6,-16.2 -20.4,-16.2c-0.7,0 -1.5,0 -2.2,0.1c-1,0.1 -2,0.2 -2.9,0.4c-3.9,-3.1 -8.8,-5 -14.1,-5.5C47.7,16.5 46.8,16.5 46,16.5L46,16.5z" />
-    <path
-        android:fillColor="#FF8A50"
-        android:pathData="M61.5,65.1c1.1,0 1.9,1 1.7,2.2c-0.9,5.1 -5.2,9 -10.2,9s-9.3,-3.9 -10.2,-9c-0.2,-1.1 0.6,-2.2 1.7,-2.2L61.5,65.1z" />
-    <path
-        android:fillColor="#FF8A50"
-        android:pathData="M42.7,56.8m-3.7,0a3.7,3.7 0,1 1,7.4 0a3.7,3.7 0,1 1,-7.4 0" />
-    <path
-        android:fillColor="#FF8A50"
-        android:pathData="M63.2,56.8m-3.7,0a3.7,3.7 0,1 1,7.4 0a3.7,3.7 0,1 1,-7.4 0" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M40.8,54.9m-2.3,0a2.3,2.3 0,1 1,4.6 0a2.3,2.3 0,1 1,-4.6 0" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M61.4,54.9m-2.3,0a2.3,2.3 0,1 1,4.6 0a2.3,2.3 0,1 1,-4.6 0" />
+<vector android:height="24dp" android:viewportHeight="80"
+    android:viewportWidth="80" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#fff" android:pathData="M33.32,74.5A17.48,17.48 0,0 1,15.86 57V52.2A15.73,15.73 0,0 1,11.43 23c0,-0.39 0,-0.76 0.05,-1.14C12.29,12.54 21.11,5.5 32,5.5c0.73,0 1.48,0 2.22,0.1a23.49,23.49 0,0 1,13.56 5.75,21.53 21.53,0 0,1 4,-0.74c0.65,-0.06 1.31,-0.09 2,-0.09 9.24,0 16.71,5.8 17.37,13.48a11.76,11.76 0,0 1,0 2.22,10.94 10.94,0 0,1 5,6.33A10.55,10.55 0,0 1,75 40.73a17.19,17.19 0,0 1,-10.79 7.62c-0.69,0.17 -1.4,0.31 -2.1,0.41V57A17.48,17.48 0,0 1,44.61 74.5Z"/>
+    <path android:fillColor="#ff8a50" android:pathData="M32,8.5q1,0 2,0.09a20,20 0,0 1,13 6.19,18.12 18.12,0 0,1 5,-1.18c0.57,0 1.13,-0.08 1.69,-0.08 7.57,0 13.85,4.57 14.38,10.73a9.75,9.75 0,0 1,-0.38 3.66,8.58 8.58,0 0,1 5.53,5.45c1.39,4.94 -3,10.35 -9.81,12.08a17.2,17.2 0,0 1,-4.21 0.52h-0.15V57A14.51,14.51 0,0 1,44.61 71.5H33.32A14.51,14.51 0,0 1,18.86 57V49.49a12.71,12.71 0,0 1,-4.31 -24.62,12.6 12.6,0 0,1 -0.08,-2.75C15.15,14.3 22.81,8.5 32,8.5m0,-6h0C19.67,2.5 9.64,10.55 8.53,21.27a18.74,18.74 0,0 0,4.33 33.22V57A20.49,20.49 0,0 0,33.32 77.5H44.61A20.49,20.49 0,0 0,65.07 57V51.21a20.08,20.08 0,0 0,12.48 -9,13.21 13.21,0 0,0 -3.43,-17.56c0,-0.31 0,-0.62 -0.05,-0.93 -0.8,-9.24 -9.55,-16.22 -20.36,-16.22 -0.74,0 -1.49,0 -2.22,0.1a24.73,24.73 0,0 0,-3 0.45A26.37,26.37 0,0 0,34.48 2.61c-0.82,-0.07 -1.66,-0.11 -2.48,-0.11Z"/>
+    <path android:fillColor="#ff8a50" android:pathData="M47.48,51.06a1.82,1.82 0,0 1,1.72 2.18,10.66 10.66,0 0,1 -10.24,9 10.65,10.65 0,0 1,-10.23 -9,1.82 1.82,0 0,1 1.71,-2.18Z"/>
+    <path android:fillColor="#ff8a50" android:pathData="M28.69,42.8m-3.73,0a3.73,3.73 0,1 1,7.46 0a3.73,3.73 0,1 1,-7.46 0"/>
+    <path android:fillColor="#ff8a50" android:pathData="M49.23,42.8m-3.73,0a3.73,3.73 0,1 1,7.46 0a3.73,3.73 0,1 1,-7.46 0"/>
+    <path android:fillColor="#fff" android:pathData="M26.83,40.93m-2.33,0a2.33,2.33 0,1 1,4.66 0a2.33,2.33 0,1 1,-4.66 0"/>
+    <path android:fillColor="#fff" android:pathData="M47.36,40.93m-2.33,0a2.33,2.33 0,1 1,4.66 0a2.33,2.33 0,1 1,-4.66 0"/>
 </vector>
