feature: separate debug version

--- a/android/core/src/main/res/drawable/ic_broccy_think.xml
+++ b/android/core/src/main/res/drawable/ic_broccy_think.xml
@@ -1,50 +1,56 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-  <path
-      android:pathData="M47.3,88.5c-9.6,0 -17.5,-7.8 -17.5,-17.5v-4.8c-7.2,-1.4 -12.6,-7.8 -12.6,-15.4c0,-5.8 3.2,-11.1 8.1,-13.8c0,-0.4 0,-0.8 0.1,-1.1c0.8,-9.3 9.6,-16.4 20.5,-16.4c0.7,0 1.5,0 2.2,0.1c5.1,0.5 10,2.5 13.6,5.7c1.3,-0.4 2.6,-0.6 4,-0.7c0.6,-0.1 1.3,-0.1 2,-0.1c9.2,0 16.7,5.8 17.4,13.5c0.1,0.7 0.1,1.5 0,2.2c2.5,1.5 4.3,3.7 5,6.3c0.8,2.7 0.3,5.6 -1.2,8.2c-2.1,3.6 -6,6.4 -10.8,7.6c-0.7,0.2 -1.4,0.3 -2.1,0.4V71c0,9.6 -7.8,17.5 -17.5,17.5H47.3z"
-      android:fillColor="#FFFFFF"/>
-  <path
-      android:pathData="M46,22.5c0.6,0 1.3,0 2,0.1c5.3,0.5 10,2.8 13,6.2c1.6,-0.6 3.2,-1 5,-1.2c0.6,-0.1 1.1,-0.1 1.7,-0.1c7.6,0 13.9,4.6 14.4,10.7c0.1,1.3 0,2.5 -0.4,3.7c2.7,1 4.8,2.9 5.5,5.4c1.4,4.9 -3,10.3 -9.8,12.1C76,59.8 74.6,60 73.2,60c-0.1,0 -0.1,0 -0.2,0V71c0,8 -6.5,14.5 -14.5,14.5H47.3c-8,0 -14.5,-6.5 -14.5,-14.5v-7.6c-6.9,0 -12.6,-5.7 -12.6,-12.7c0,-5.5 3.4,-10.1 8.3,-11.9c-0.1,-0.9 -0.2,-1.8 -0.1,-2.8C29.1,28.3 36.8,22.5 46,22.5M46,16.5C46,16.5 46,16.5 46,16.5c-12.3,0 -22.4,8 -23.5,18.8c-5.1,3.4 -8.2,9.2 -8.2,15.5c0,8.2 5.3,15.2 12.6,17.7V71c0,11.3 9.2,20.5 20.5,20.5h11.3c11.3,0 20.5,-9.2 20.5,-20.5v-5.8c5.5,-1.4 10,-4.7 12.5,-9c1.9,-3.3 2.4,-7 1.5,-10.5c-0.8,-2.8 -2.5,-5.2 -4.9,-7.1c0,-0.3 0,-0.6 -0.1,-0.9c-0.8,-9.2 -9.6,-16.2 -20.4,-16.2c-0.7,0 -1.5,0 -2.2,0.1c-1,0.1 -2,0.2 -2.9,0.4c-3.9,-3.1 -8.8,-5 -14.1,-5.5C47.7,16.5 46.8,16.5 46,16.5L46,16.5z"
-      android:fillColor="#FF8A50"/>
-  <path
-      android:pathData="M48.2,68c0,0 7.1,-1.1 11.4,1.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#FF8A50"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M42.24,59.64a4.5,3.7 99.18,1 0,1.44 -8.88a4.5,3.7 99.18,1 0,-1.44 8.88z"
-      android:fillColor="#FF8A50"/>
-  <path
-      android:pathData="M62.59,60.78a4,3.7 99.18,1 0,1.28 -7.9a4,3.7 99.18,1 0,-1.28 7.9z"
-      android:fillColor="#FF8A50"/>
-  <path
-      android:pathData="M41.1,53.3m-2.3,0a2.3,2.3 0,1 1,4.6 0a2.3,2.3 0,1 1,-4.6 0"
-      android:fillColor="#FFFFFF"/>
-  <path
-      android:pathData="M69,54.9c0,0 8.1,4.9 6.5,15.4s2.7,15.1 2.7,15.1"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#8EACBB"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M61.4,54.9m-2.3,0a2.3,2.3 0,1 1,4.6 0a2.3,2.3 0,1 1,-4.6 0"
-      android:fillColor="#FFFFFF"/>
-  <path
-      android:pathData="M62.2,63.15a6.4,6 99.18,1 0,2.04 -12.64a6.4,6 99.18,1 0,-2.04 12.64z"
-      android:strokeAlpha="0.25"
-      android:strokeWidth="2"
-      android:fillColor="#FFFFFF"
-      android:strokeColor="#CFCFCF"
-      android:fillAlpha="0.25"/>
-  <path
-      android:pathData="M62.2,63.15a6.4,6 99.18,1 0,2.04 -12.64a6.4,6 99.18,1 0,-2.04 12.64z"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#8EACBB"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="2032.2"
+    android:viewportHeight="2032.2">
+    <path
+        android:fillColor="#fff"
+        android:pathData="M1856.3,848.8c-17.9,-63.2 -69.9,-111.1 -139.1,-137.3 9,-29.8 12.2,-61.1 9.6,-92.2 -14.4,-166.9 -195.8,-287.1 -405.1,-268.5 -43.5,3.9 -86.3,13.9 -127,29.6 -77.1,-84.6 -193.6,-144 -328.2,-156 -252.9,-22.4 -472.7,130.3 -490.9,341.2 -1.9,23.1 -1.3,46.4 1.9,69.3 -121.3,44.8 -208,162.2 -208,300.3 0,176.7 141.8,320 316.6,320v190.3c0,200.4 164,364.3 364.4,364.3h284.5c200.4,0 364.4,-164 364.4,-364.3v-279.2c37,0.3 74,-4.1 109.9,-13.2 171.7,-43.6 282.4,-179.9 247.2,-304.4Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#ff8a50"
+        android:pathData="M817,222.3c16.2,0 32.7,0.7 49.3,2.2 134.6,12 251.1,71.4 328.2,156 40.7,-15.8 83.5,-25.8 127,-29.6 14.3,-1.3 28.5,-1.9 42.6,-1.9 190.8,0 349.1,115 362.5,270.4 2.6,31 -0.6,62.3 -9.6,92.2 69.3,26.3 121.3,74.2 139.1,137.3 35.2,124.5 -75.5,260.8 -247.2,304.4 -34.7,8.8 -70.3,13.2 -106,13.2h-3.9v279.1c0,200.4 -164,364.3 -364.4,364.3h-284.5c-200.4,0 -364.3,-163.9 -364.3,-364.3v-190.4c-174.9,0 -316.6,-143.3 -316.6,-320 0,-138.1 86.7,-255.4 208,-300.3 -3.1,-23 -3.7,-46.2 -1.9,-69.3 17,-197 210,-343.3 441.6,-343.3M817,52.9c-73.8,-0.2 -147.2,11.5 -217.3,34.4 -69.1,22.8 -132.1,55.9 -187.4,98.6 -57.7,44.5 -104.6,97.6 -139.6,157.7 -34.2,58.3 -56,123 -64.1,190.1 -6.2,4.4 -12.4,8.9 -18.4,13.6C-24.2,713.4 -63.3,1021.7 102.7,1236c12.1,15.6 25.1,30.5 39,44.5 44.2,44.8 96.6,80.5 154.5,105.2 6.8,2.9 13.6,5.6 20.5,8.2v51.6c-0.1,71.4 14.3,142 42.2,207.7 54.4,127.7 156.1,229.4 283.8,283.8 65.7,28 136.3,42.3 207.7,42.2h284.5c71.4,0.1 142,-14.3 207.7,-42.2 127.7,-54.4 229.4,-156.1 283.8,-283.8 28,-65.7 42.3,-136.3 42.2,-207.7v-133c28.7,-8.2 56.7,-18.5 83.8,-30.9 31.6,-14.4 61.9,-31.7 90.3,-51.7 27.9,-19.6 53.7,-42 77.1,-66.8 23.4,-24.8 43.9,-52.2 61,-81.7 24.1,-41.8 40,-86 47.1,-131.3 12.9,-81.2 -3.7,-164.4 -46.9,-234.4 -16,-26 -35.3,-49.8 -57.2,-71 -8.7,-8.4 -17.8,-16.5 -27.3,-24.1 -0.3,-5.3 -0.6,-10.5 -1.1,-15.8 -2.8,-32.3 -9.4,-64.3 -19.6,-95.1 -10,-30 -23.3,-58.7 -39.6,-85.8 -31.1,-51.4 -72.6,-96.6 -123.5,-134.3 -48,-35.5 -102.6,-63 -162.3,-81.9 -60.3,-18.9 -123,-28.4 -186.2,-28.2 -19.1,0 -38.4,0.9 -57.5,2.5 -22.9,2 -45.7,5.3 -68.3,9.8 -2.7,-2 -5.3,-4 -8,-6 -32.8,-24.2 -67.8,-45.3 -104.5,-63.1 -76,-36.8 -158.3,-59.4 -244.5,-67 -21.3,-1.9 -43,-2.9 -64.3,-2.9h0Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M871.8,1366.6s178,-27.4 283.8,38.3"
+        android:strokeWidth="70"
+        android:strokeColor="#ff8a50"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#ff8a50"
+        android:pathData="M720.9,1171.4a127.7,106 99.2,1 0,40.8 -252.2a127.7,106 99.2,1 0,-40.8 252.2z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M688.3,992.2m-66.2,0a66.2,66.2 0,1 1,132.5 0a66.2,66.2 0,1 1,-132.5 0"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#ff8a50"
+        android:pathData="M1229.5,1201.2a116.6,108.8 99.2,1 0,37.2 -230.2a116.6,108.8 99.2,1 0,-37.2 230.2z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#fff"
+        android:pathData="M1193.6,1031.7m-68,0a68,68 0,1 1,136 0a68,68 0,1 1,-136 0"
+        android:strokeWidth="0" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#fff"
+        android:pathData="M1218.3,1270.7a187,174.5 99.2,1 0,59.7 -369.2a187,174.5 99.2,1 0,-59.7 369.2z"
+        android:strokeWidth="58.29"
+        android:strokeAlpha="0.25"
+        android:strokeColor="#cfcfcf" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M1218.3,1270.7a187,174.5 99.2,1 0,59.7 -369.2a187,174.5 99.2,1 0,-59.7 369.2z"
+        android:strokeWidth="58.29"
+        android:strokeColor="#8eacbb" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M1419.5,1045.2s174.2,117.8 134.2,380.1c-40,262.4 67.1,378.2 67.1,378.2"
+        android:strokeWidth="50"
+        android:strokeColor="#8eacbb"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
