--- a/android/app/src/main/res/drawable/ic_broccy_icon_foreground.xml
+++ b/android/app/src/main/res/drawable/ic_broccy_icon_foreground.xml
@@ -3,23 +3,19 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="0.51262134"
-      android:scaleY="0.51262134"
-      android:translateX="26.574757"
-      android:translateY="26.318447">
-    <path
-        android:pathData="M44,14c0.8,0 1.6,0 2.5,0.1c6.8,0.6 12.7,3.6 16.5,7.9c2,-0.8 4.1,-1.3 6.4,-1.5c0.7,-0.1 1.4,-0.1 2.1,-0.1c9.6,0 17.6,5.8 18.3,13.6c0.1,1.6 0,3.2 -0.5,4.6c3.5,1.3 6.1,3.7 7,6.9c1.8,6.3 -3.8,13.1 -12.5,15.3c-1.8,0.5 -3.6,0.7 -5.3,0.7c-0.1,0 -0.1,0 -0.2,0v14.1C78.3,85.7 70.1,94 60,94H45.6c-10.1,0 -18.4,-8.3 -18.4,-18.4V66c-8.8,0 -16,-7.2 -16,-16.1c0,-7 4.4,-12.9 10.5,-15.1c-0.1,-1.1 -0.2,-2.3 -0.1,-3.5C22.6,21.4 32.3,14 44,14M44,5.5C44,5.5 44,5.5 44,5.5c-16,0 -29,10.4 -30.7,24.2C6.8,34.2 2.8,41.8 2.8,49.9c0,10.6 6.6,19.6 16,23.1v2.6c0,14.8 12.1,26.9 26.9,26.9H60c14.8,0 26.9,-12.1 26.9,-26.9v-6.7c6.9,-2 12.6,-6.2 15.7,-11.6c2.6,-4.4 3.2,-9.4 1.9,-14c-1,-3.6 -3.2,-6.7 -6.2,-9.2c0,-0.3 0,-0.5 -0.1,-0.8c-1.1,-12.2 -12.6,-21.4 -26.8,-21.4c-1,0 -1.9,0 -2.9,0.1c-1.2,0.1 -2.3,0.3 -3.4,0.5c-5,-3.9 -11.3,-6.3 -18,-6.9C46.1,5.5 45,5.5 44,5.5L44,5.5z"
-        android:fillColor="#FF8A50"/>
-    <path
-        android:pathData="M63.6,68c1.4,0 2.4,1.3 2.2,2.8c-1.2,6.5 -6.6,11.5 -13,11.5s-11.8,-4.9 -13,-11.5C39.6,69.4 40.6,68 42,68L63.6,68z"
-        android:fillColor="#FF8A50"/>
-    <path
-        android:pathData="M39.2,51c-0.6,0 -1.1,0.1 -1.6,0.2c1,0.4 1.6,1.4 1.6,2.5c0,1.5 -1.2,2.7 -2.7,2.7c-1.1,0 -2.1,-0.7 -2.5,-1.6c-0.2,0.5 -0.2,1.1 -0.2,1.6c0,3 2.5,5.5 5.5,5.5c3,0 5.5,-2.5 5.5,-5.5C44.7,53.4 42.2,51 39.2,51z"
-        android:strokeWidth="6.349214e-02"
-        android:fillColor="#FF8A50"
-        android:strokeColor="#FF8A50"/>
-    <path
-        android:pathData="M66.5,51c-0.6,0 -1.1,0.1 -1.6,0.2c1,0.4 1.6,1.4 1.6,2.5c0,1.5 -1.2,2.7 -2.7,2.7c-1.1,0 -2.1,-0.7 -2.5,-1.6c-0.2,0.5 -0.2,1.1 -0.2,1.6c0,3 2.5,5.5 5.5,5.5c3,0 5.5,-2.5 5.5,-5.5C71.9,53.4 69.5,51 66.5,51z"
-        android:fillColor="#FF8A50"/>
-  </group>
+  <path
+      android:pathData="M75.5,49.8c-0.5,-1.6 -1.8,-2.8 -3.6,-3.5c0.2,-0.8 0.3,-1.6 0.2,-2.4c-0.4,-4.3 -5,-7.3 -10.4,-6.9c-1.1,0.1 -2.2,0.4 -3.2,0.8c-2,-2.2 -5,-3.7 -8.4,-4c-6.5,-0.6 -12.1,3.3 -12.6,8.7c0,0.6 0,1.2 0,1.8c-3.1,1.1 -5.3,4.1 -5.3,7.7c0,4.5 3.6,8.2 8.1,8.2V65c0,5.1 4.2,9.3 9.3,9.3H57c5.1,0 9.3,-4.2 9.3,-9.3v-7.1c0.9,0 1.9,-0.1 2.8,-0.3C73.6,56.4 76.4,52.9 75.5,49.8z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M48.9,33.7c0.4,0 0.8,0 1.3,0.1c3.4,0.3 6.4,1.8 8.4,4c1,-0.4 2.1,-0.7 3.2,-0.8c0.4,0 0.7,0 1.1,0c4.9,0 8.9,2.9 9.3,6.9c0.1,0.8 0,1.6 -0.2,2.4c1.8,0.7 3.1,1.9 3.6,3.5c0.9,3.2 -1.9,6.7 -6.3,7.8c-0.9,0.2 -1.8,0.3 -2.7,0.3h-0.1V65c0,5.1 -4.2,9.3 -9.3,9.3h-7.3c-5.1,0 -9.3,-4.2 -9.3,-9.3v-4.9c-4.5,0 -8.1,-3.7 -8.1,-8.2c0,-3.5 2.2,-6.5 5.3,-7.7c-0.1,-0.6 -0.1,-1.2 0,-1.8C38,37.5 43,33.7 48.9,33.7M48.9,29.4c-1.9,0 -3.8,0.3 -5.6,0.9c-1.8,0.6 -3.4,1.4 -4.8,2.5c-1.5,1.1 -2.7,2.5 -3.6,4c-0.9,1.5 -1.4,3.1 -1.6,4.9c-0.2,0.1 -0.3,0.2 -0.5,0.3c-5.5,4.2 -6.5,12.1 -2.2,17.6c0.3,0.4 0.6,0.8 1,1.1c1.1,1.1 2.5,2.1 4,2.7c0.2,0.1 0.3,0.1 0.5,0.2V65c0,1.8 0.4,3.6 1.1,5.3c1.4,3.3 4,5.9 7.3,7.3c1.7,0.7 3.5,1.1 5.3,1.1H57c1.8,0 3.6,-0.4 5.3,-1.1c3.3,-1.4 5.9,-4 7.3,-7.3c0.7,-1.7 1.1,-3.5 1.1,-5.3v-3.4c0.7,-0.2 1.5,-0.5 2.1,-0.8c0.8,-0.4 1.6,-0.8 2.3,-1.3c0.7,-0.5 1.4,-1.1 2,-1.7c0.6,-0.6 1.1,-1.3 1.6,-2.1c0.6,-1.1 1,-2.2 1.2,-3.4c0.3,-2.1 -0.1,-4.2 -1.2,-6c-0.4,-0.7 -0.9,-1.3 -1.5,-1.8c-0.2,-0.2 -0.5,-0.4 -0.7,-0.6c0,-0.1 0,-0.3 0,-0.4c-0.1,-0.8 -0.2,-1.6 -0.5,-2.4c-0.3,-0.8 -0.6,-1.5 -1,-2.2c-0.8,-1.3 -1.9,-2.5 -3.2,-3.4c-1.2,-0.9 -2.6,-1.6 -4.2,-2.1c-1.5,-0.5 -3.1,-0.7 -4.8,-0.7c-0.5,0 -1,0 -1.5,0.1c-0.6,0.1 -1.2,0.1 -1.7,0.3c-0.1,-0.1 -0.1,-0.1 -0.2,-0.2c-0.8,-0.6 -1.7,-1.2 -2.7,-1.6c-1.9,-0.9 -4,-1.5 -6.3,-1.7C50,29.4 49.5,29.4 48.9,29.4L48.9,29.4z"
+      android:fillColor="#FF8A50"/>
+  <path
+      android:pathData="M58.9,61.2c0.7,0 1.2,0.7 1.1,1.4c-0.6,3.3 -3.3,5.8 -6.6,5.8s-6,-2.5 -6.6,-5.8c-0.1,-0.7 0.4,-1.4 1.1,-1.4H58.9z"
+      android:fillColor="#FF8A50"/>
+  <path
+      android:pathData="M46.5,52.5c-0.3,0 -0.6,0 -0.8,0.1c0.7,0.3 1,1.1 0.7,1.8c-0.3,0.7 -1.1,1 -1.8,0.7c-0.3,-0.1 -0.6,-0.4 -0.7,-0.7c-0.5,1.5 0.4,3 1.8,3.5c1.5,0.5 3,-0.4 3.5,-1.8c0.5,-1.5 -0.4,-3 -1.8,-3.5C47,52.5 46.7,52.5 46.5,52.5L46.5,52.5z"
+      android:fillColor="#FF8A50"/>
+  <path
+      android:pathData="M60.3,52.5c-0.3,0 -0.6,0 -0.8,0.1c0.7,0.3 1,1.1 0.7,1.8c-0.3,0.7 -1.1,1 -1.8,0.7c-0.3,-0.1 -0.6,-0.4 -0.7,-0.7c-0.5,1.5 0.4,3 1.8,3.5s3,-0.4 3.5,-1.8c0.5,-1.5 -0.4,-3 -1.8,-3.5C60.9,52.5 60.6,52.5 60.3,52.5L60.3,52.5z"
+      android:fillColor="#FF8A50"/>
 </vector>
