--- a/android/core/src/main/res/drawable/ic_broccoin.xml
+++ b/android/core/src/main/res/drawable/ic_broccoin.xml
@@ -1,14 +1,36 @@
-<vector android:height="24dp" android:viewportHeight="100"
-    android:viewportWidth="100" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#faa833" android:pathData="M50,50m-46,0a46,46 0,1 1,92 0a46,46 0,1 1,-92 0"/>
-    <path android:fillColor="#fcda43" android:pathData="M50,8A42,42 0,1 1,8 50,42 42,0 0,1 50,8m0,-8a50,50 0,1 0,50 50A50,50 0,0 0,50 0Z"/>
-    <path android:fillColor="#faa931" android:pathData="M45.62,76.18a13.72,13.72 0,0 1,-13.7 -13.71V58.86A12.37,12.37 0,0 1,28.48 36c0,-0.27 0,-0.54 0,-0.8 0.64,-7.33 7.55,-12.85 16.08,-12.85 0.58,0 1.16,0 1.74,0.08a18.48,18.48 0,0 1,10.54 4.43,18.23 18.23,0 0,1 3,-0.55q0.76,-0.06 1.53,-0.06c7.26,0 13.12,4.55 13.65,10.6a11.36,11.36 0,0 1,0 1.65A8.62,8.62 0,0 1,79 43.43a8.38,8.38 0,0 1,-0.92 6.49,13.51 13.51,0 0,1 -8.48,6 15.15,15.15 0,0 1,-1.49 0.31v6.26A13.73,13.73 0,0 1,54.38 76.18Z"/>
-    <path android:fillColor="#fcda43" android:pathData="M44.6,24.84c0.5,0 1,0 1.52,0.07a15.45,15.45 0,0 1,10.09 4.8,14.52 14.52,0 0,1 3.91,-0.92c0.44,0 0.88,-0.05 1.31,-0.05 5.87,0 10.74,3.53 11.15,8.31a7.51,7.51 0,0 1,-0.29 2.84,6.64 6.64,0 0,1 4.28,4.22c1.08,3.84 -2.32,8 -7.6,9.37a13.33,13.33 0,0 1,-3.26 0.4h-0.12v8.59A11.24,11.24 0,0 1,54.38 73.68H45.62a11.24,11.24 0,0 1,-11.2 -11.21V56.62a9.86,9.86 0,0 1,-3.35 -19.09A9.45,9.45 0,0 1,31 35.4c0.52,-6.06 6.45,-10.56 13.58,-10.56m0,-5h0c-9.68,0 -17.56,6.29 -18.52,14.71a14.87,14.87 0,0 0,3.34 26.19v1.73a16.22,16.22 0,0 0,16.2 16.21h8.76A16.23,16.23 0,0 0,70.59 62.47V58.22a15.86,15.86 0,0 0,9.63 -7,10.6 10.6,0 0,0 -2.62,-14l0,-0.58C76.93,29.28 70,23.74 61.43,23.74c-0.58,0 -1.17,0 -1.75,0.07a19.38,19.38 0,0 0,-2.16 0.32,20.8 20.8,0 0,0 -11,-4.2c-0.65,-0.06 -1.31,-0.09 -2,-0.09Z"/>
-    <path android:fillColor="#fcda43" android:pathData="M56.6,57.83a1.4,1.4 0,0 1,1.33 1.69,8 8,0 0,1 -15.87,0 1.41,1.41 0,0 1,1.34 -1.69Z"/>
-    <path android:fillColor="#fcda43" android:pathData="M42.04,51.43m-2.89,0a2.89,2.89 0,1 1,5.78 0a2.89,2.89 0,1 1,-5.78 0"/>
-    <path android:fillColor="#fcda43" android:pathData="M57.96,51.43m-2.89,0a2.89,2.89 0,1 1,5.78 0a2.89,2.89 0,1 1,-5.78 0"/>
-    <path android:fillColor="#faa931" android:pathData="M40.59,49.98m-1.81,0a1.81,1.81 0,1 1,3.62 0a1.81,1.81 0,1 1,-3.62 0"/>
-    <path android:fillColor="#faa931" android:pathData="M56.51,49.98m-1.81,0a1.81,1.81 0,1 1,3.62 0a1.81,1.81 0,1 1,-3.62 0"/>
-    <path android:fillAlpha="0.04" android:fillColor="#FF000000"
-        android:pathData="M100,50a50,50 0,0 1,-50 50V0A50,50 0,0 1,100 50Z" android:strokeAlpha="0.04"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="100"
+    android:viewportHeight="100">
+    <path
+        android:fillColor="#faa833"
+        android:pathData="M50,50m-46,0a46,46 0,1 1,92 0a46,46 0,1 1,-92 0"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#fcda43"
+        android:pathData="M50,8c23.16,0 42,18.84 42,42s-18.84,42 -42,42S8,73.16 8,50 26.84,8 50,8M50,0C22.39,0 0,22.39 0,50s22.39,50 50,50 50,-22.39 50,-50S77.61,0 50,0h0Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#fcda43"
+        android:pathData="M44.64,25c0.5,0 1,0.02 1.51,0.07 4.11,0.37 7.67,2.18 10.03,4.77 1.24,-0.48 2.55,-0.79 3.88,-0.91 0.44,-0.04 0.87,-0.06 1.3,-0.06 5.83,0 10.67,3.51 11.08,8.26 0.08,0.95 -0.02,1.9 -0.29,2.82 2.12,0.8 3.71,2.27 4.25,4.2 1.08,3.81 -2.31,7.97 -7.55,9.3 -1.06,0.27 -2.15,0.4 -3.24,0.4h-0.12v8.53c0,6.12 -5.01,11.13 -11.13,11.13h-8.69c-6.12,0 -11.13,-5.01 -11.13,-11.13v-5.82c-5.34,0 -9.68,-4.38 -9.68,-9.78 0,-4.22 2.65,-7.81 6.36,-9.18 -0.09,-0.7 -0.11,-1.41 -0.06,-2.12 0.52,-6.02 6.42,-10.49 13.49,-10.49M44.64,19.83c-2.26,0 -4.5,0.35 -6.64,1.05 -2.11,0.7 -4.04,1.71 -5.73,3.01 -1.76,1.36 -3.2,2.98 -4.27,4.82 -1.04,1.78 -1.71,3.76 -1.96,5.81 -0.19,0.13 -0.38,0.27 -0.56,0.41 -6.55,5.07 -7.75,14.5 -2.67,21.05 0.37,0.48 0.77,0.93 1.19,1.36 1.35,1.37 2.95,2.46 4.72,3.21 0.21,0.09 0.42,0.17 0.63,0.25v1.58c0,2.18 0.44,4.34 1.29,6.35 1.66,3.9 4.77,7.01 8.67,8.67 2.01,0.85 4.17,1.29 6.35,1.29h8.7c2.18,0 4.34,-0.44 6.35,-1.29 3.9,-1.66 7.01,-4.77 8.67,-8.67 0.85,-2.01 1.29,-4.17 1.29,-6.35v-4.06c0.88,-0.25 1.73,-0.57 2.56,-0.94 0.97,-0.44 1.89,-0.97 2.76,-1.58 0.85,-0.6 1.64,-1.28 2.36,-2.04 0.72,-0.76 1.34,-1.6 1.86,-2.5 0.74,-1.28 1.22,-2.63 1.44,-4.01 0.39,-2.48 -0.11,-5.02 -1.43,-7.16 -0.49,-0.79 -1.08,-1.52 -1.75,-2.17 -0.27,-0.26 -0.54,-0.5 -0.84,-0.74 0,-0.16 -0.02,-0.32 -0.03,-0.48 -0.09,-0.99 -0.29,-1.96 -0.6,-2.91 -0.31,-0.92 -0.71,-1.8 -1.21,-2.62 -0.95,-1.57 -2.22,-2.95 -3.77,-4.1 -1.47,-1.08 -3.14,-1.93 -4.96,-2.5 -1.84,-0.58 -3.76,-0.87 -5.69,-0.86 -0.58,0 -1.17,0.03 -1.76,0.08 -0.7,0.06 -1.4,0.16 -2.09,0.3 -0.08,-0.06 -0.16,-0.12 -0.24,-0.18 -1,-0.74 -2.07,-1.39 -3.19,-1.93 -2.32,-1.12 -4.84,-1.81 -7.47,-2.05 -0.65,-0.06 -1.31,-0.09 -1.97,-0.09h0Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#fcda43"
+        android:pathData="M56.57,57.78c0.83,0 1.48,0.81 1.32,1.68 -0.73,3.96 -3.98,6.95 -7.88,6.95s-7.15,-2.99 -7.88,-6.95c-0.16,-0.87 0.49,-1.68 1.32,-1.68h13.12Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#fcda43"
+        android:pathData="M41.73,47.43c-0.33,0 -0.67,0.05 -0.98,0.15 0.84,0.37 1.22,1.35 0.85,2.19s-1.35,1.22 -2.19,0.85c-0.38,-0.17 -0.68,-0.47 -0.85,-0.85 -0.54,1.76 0.44,3.62 2.19,4.16 1.76,0.54 3.62,-0.44 4.16,-2.19s-0.44,-3.62 -2.19,-4.16c-0.32,-0.1 -0.65,-0.15 -0.98,-0.15h0Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#fcda43"
+        android:pathData="M58.28,47.43c-0.33,0 -0.67,0.05 -0.98,0.15 0.84,0.37 1.22,1.35 0.85,2.19s-1.35,1.22 -2.19,0.85c-0.38,-0.17 -0.68,-0.47 -0.85,-0.85 -0.54,1.76 0.44,3.62 2.19,4.16 1.76,0.54 3.62,-0.44 4.16,-2.19 0.54,-1.76 -0.44,-3.62 -2.19,-4.16 -0.32,-0.1 -0.65,-0.15 -0.98,-0.15h0Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillAlpha="0.04"
+        android:fillColor="#FF000000"
+        android:pathData="M100,50c0,27.61 -22.39,50 -50,50V0c27.61,0 50,22.39 50,50Z"
+        android:strokeWidth="0"
+        android:strokeAlpha="0.04" />
 </vector>
