--- a/android/core/src/main/res/drawable/ic_broccy.xml
+++ b/android/core/src/main/res/drawable/ic_broccy.xml
@@ -1,23 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="72dp"
-    android:height="72dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-  <path
-      android:pathData="M45.6,98.3C33.2,98.3 23,88.1 23,75.6v-5.8c-9.1,-2 -16,-10.2 -16,-19.9c0,-7.4 4,-14.2 10.3,-17.8c0,-0.4 0,-0.8 0.1,-1.2C18.5,18.8 29.9,9.7 44,9.7c0.9,0 1.9,0 2.9,0.1c6.5,0.6 12.7,3.2 17.3,7.2c1.6,-0.4 3.2,-0.7 4.9,-0.9c0.8,-0.1 1.7,-0.1 2.5,-0.1c12,0 21.7,7.5 22.5,17.5c0.1,0.9 0.1,1.7 0,2.6c3.2,2 5.4,4.8 6.4,8.1c1,3.5 0.5,7.3 -1.5,10.8c-2.7,4.7 -7.8,8.3 -14,9.9c-0.8,0.2 -1.5,0.4 -2.3,0.5v10.1c0,12.5 -10.2,22.6 -22.6,22.6H45.6z"
-      android:fillColor="#FFFFFF"/>
-  <path
-      android:pathData="M44,14c0.8,0 1.6,0 2.5,0.1c6.8,0.6 12.7,3.6 16.5,7.9c2,-0.8 4.1,-1.3 6.4,-1.5c0.7,-0.1 1.4,-0.1 2.1,-0.1c9.6,0 17.6,5.8 18.3,13.6c0.1,1.6 0,3.2 -0.5,4.6c3.5,1.3 6.1,3.7 7,6.9c1.8,6.3 -3.8,13.1 -12.5,15.3c-1.8,0.5 -3.6,0.7 -5.3,0.7c-0.1,0 -0.1,0 -0.2,0v14.1C78.3,85.7 70.1,94 60,94H45.6c-10.1,0 -18.4,-8.3 -18.4,-18.4V66c-8.8,0 -16,-7.2 -16,-16.1c0,-7 4.4,-12.9 10.5,-15.1c-0.1,-1.1 -0.2,-2.3 -0.1,-3.5C22.6,21.4 32.3,14 44,14M44,5.5C44,5.5 44,5.5 44,5.5c-16,0 -29,10.4 -30.7,24.2C6.8,34.2 2.8,41.8 2.8,49.9c0,10.6 6.6,19.6 16,23.1v2.6c0,14.8 12.1,26.9 26.9,26.9H60c14.8,0 26.9,-12.1 26.9,-26.9v-6.7c6.9,-2 12.6,-6.2 15.7,-11.6c2.6,-4.4 3.2,-9.4 1.9,-14c-1,-3.6 -3.2,-6.7 -6.2,-9.2c0,-0.3 0,-0.5 -0.1,-0.8c-1.1,-12.2 -12.6,-21.4 -26.8,-21.4c-1,0 -1.9,0 -2.9,0.1c-1.2,0.1 -2.3,0.3 -3.4,0.5c-5,-3.9 -11.3,-6.3 -18,-6.9C46.1,5.5 45,5.5 44,5.5L44,5.5z"
-      android:fillColor="#FF8A50"/>
-  <path
-      android:pathData="M63.6,68c1.4,0 2.4,1.3 2.2,2.8c-1.2,6.5 -6.6,11.5 -13,11.5s-11.8,-4.9 -13,-11.5C39.6,69.4 40.6,68 42,68L63.6,68z"
-      android:fillColor="#FF8A50"/>
-  <path
-      android:pathData="M39.2,51c-0.6,0 -1.1,0.1 -1.6,0.2c1,0.4 1.6,1.4 1.6,2.5c0,1.5 -1.2,2.7 -2.7,2.7c-1.1,0 -2.1,-0.7 -2.5,-1.6c-0.2,0.5 -0.2,1.1 -0.2,1.6c0,3 2.5,5.5 5.5,5.5c3,0 5.5,-2.5 5.5,-5.5C44.7,53.4 42.2,51 39.2,51z"
-      android:strokeWidth="6.349214e-02"
-      android:fillColor="#FF8A50"
-      android:strokeColor="#FF8A50"/>
-  <path
-      android:pathData="M66.5,51c-0.6,0 -1.1,0.1 -1.6,0.2c1,0.4 1.6,1.4 1.6,2.5c0,1.5 -1.2,2.7 -2.7,2.7c-1.1,0 -2.1,-0.7 -2.5,-1.6c-0.2,0.5 -0.2,1.1 -0.2,1.6c0,3 2.5,5.5 5.5,5.5c3,0 5.5,-2.5 5.5,-5.5C71.9,53.4 69.5,51 66.5,51z"
-      android:fillColor="#FF8A50"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="2032.2"
+    android:viewportHeight="2032.2">
+    <path
+        android:fillColor="#fff"
+        android:pathData="M1856.3,848.8c-17.9,-63.2 -69.9,-111.1 -139.1,-137.3 9,-29.8 12.2,-61.1 9.6,-92.2 -14.4,-166.9 -195.8,-287.1 -405.1,-268.5 -43.5,3.9 -86.3,13.9 -127,29.6 -77.1,-84.6 -193.6,-144 -328.2,-156 -252.9,-22.4 -472.7,130.3 -490.9,341.2 -1.9,23.1 -1.3,46.4 1.9,69.3 -121.3,44.8 -208,162.2 -208,300.3 0,176.7 141.8,320 316.6,320v190.3c0,200.4 164,364.3 364.4,364.3h284.5c200.4,0 364.4,-164 364.4,-364.3v-279.2c37,0.3 74,-4.1 109.9,-13.2 171.7,-43.6 282.4,-179.9 247.2,-304.4Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#ff8a50"
+        android:pathData="M817,222.3c16.2,0 32.7,0.7 49.3,2.2 134.6,12 251.1,71.4 328.2,156 40.7,-15.8 83.5,-25.8 127,-29.6 14.3,-1.3 28.5,-1.9 42.6,-1.9 190.8,0 349.1,115 362.5,270.4 2.6,31 -0.6,62.3 -9.6,92.2 69.3,26.3 121.3,74.2 139.1,137.3 35.2,124.5 -75.5,260.8 -247.2,304.4 -34.7,8.8 -70.3,13.2 -106,13.2h-3.9v279.1c0,200.4 -164,364.3 -364.4,364.3h-284.5c-200.4,0 -364.3,-163.9 -364.3,-364.3v-190.4c-174.9,0 -316.6,-143.3 -316.6,-320 0,-138.1 86.7,-255.4 208,-300.3 -3.1,-23 -3.7,-46.2 -1.9,-69.3 17,-197 210,-343.3 441.6,-343.3M817,52.9c-73.8,-0.2 -147.2,11.5 -217.3,34.4 -69.1,22.8 -132.1,55.9 -187.4,98.6 -57.7,44.5 -104.6,97.6 -139.6,157.7 -34.2,58.3 -56,123 -64.1,190.1 -6.2,4.4 -12.4,8.9 -18.4,13.6C-24.2,713.4 -63.3,1021.7 102.7,1236c12.1,15.6 25.1,30.5 39,44.5 44.2,44.8 96.6,80.5 154.5,105.2 6.8,2.9 13.6,5.6 20.5,8.2v51.6c-0.1,71.4 14.3,142 42.2,207.7 54.4,127.7 156.1,229.4 283.8,283.8 65.7,28 136.3,42.3 207.7,42.2h284.5c71.4,0.1 142,-14.3 207.7,-42.2 127.7,-54.4 229.4,-156.1 283.8,-283.8 28,-65.7 42.3,-136.3 42.2,-207.7v-133c28.7,-8.2 56.7,-18.5 83.8,-30.9 31.6,-14.4 61.9,-31.7 90.3,-51.7 27.9,-19.6 53.7,-42 77.1,-66.8 23.4,-24.8 43.9,-52.2 61,-81.7 24.1,-41.8 40,-86 47.1,-131.3 12.9,-81.2 -3.7,-164.4 -46.9,-234.4 -16,-26 -35.3,-49.8 -57.2,-71 -8.7,-8.4 -17.8,-16.5 -27.3,-24.1 -0.3,-5.3 -0.6,-10.5 -1.1,-15.8 -2.8,-32.3 -9.4,-64.3 -19.6,-95.1 -10,-30 -23.3,-58.7 -39.6,-85.8 -31.1,-51.4 -72.6,-96.6 -123.5,-134.3 -48,-35.5 -102.6,-63 -162.3,-81.9 -60.3,-18.9 -123,-28.4 -186.2,-28.2 -19.1,0 -38.4,0.9 -57.5,2.5 -22.9,2 -45.7,5.3 -68.3,9.8 -2.7,-2 -5.3,-4 -8,-6 -32.8,-24.2 -67.8,-45.3 -104.5,-63.1 -76,-36.8 -158.3,-59.4 -244.5,-67 -21.3,-1.9 -43,-2.9 -64.3,-2.9h0Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#ff8a50"
+        android:pathData="M1207.2,1294.7c27.1,0 48.5,26.4 43.3,54.9 -23.8,129.6 -130.2,227.3 -257.9,227.3s-234.1,-97.7 -257.9,-227.3c-5.3,-28.6 16.1,-54.9 43.3,-54.9h429.3Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#ff8a50"
+        android:pathData="M721.7,956c-10.9,0 -21.8,1.6 -32.2,4.8 27.5,12.1 39.9,44.3 27.8,71.8s-44.3,39.9 -71.8,27.8c-12.4,-5.5 -22.3,-15.4 -27.8,-27.8 -17.8,57.4 14.3,118.4 71.8,136.2 57.4,17.8 118.4,-14.3 136.2,-71.8s-14.3,-118.4 -71.8,-136.2c-10.4,-3.2 -21.3,-4.9 -32.2,-4.9h0Z"
+        android:strokeWidth="0" />
+    <path
+        android:fillColor="#ff8a50"
+        android:pathData="M1263.4,956c-10.9,0 -21.8,1.6 -32.2,4.8 27.5,12.2 39.9,44.3 27.8,71.8 -12.2,27.5 -44.3,39.9 -71.8,27.8 -12.4,-5.5 -22.3,-15.4 -27.8,-27.8 -17.8,57.4 14.3,118.4 71.8,136.2 57.4,17.8 118.4,-14.3 136.2,-71.8 17.8,-57.4 -14.3,-118.4 -71.8,-136.2 -10.4,-3.2 -21.3,-4.9 -32.2,-4.9h0Z"
+        android:strokeWidth="0" />
 </vector>
